Initialized parent POM for all jnetpcap submodules